Rainbow color-highlighting for top-level variables

Enable rainbow-color highlighting for top-level variables if there are
no class or function declarations.
Currently it's also disabled if there are imports, although more by
accident than intentionally.
REVIEW:114138
BUG:325092
GCI-TASK:5846685427171328